--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@rails/actiontext": "^7.0.3-1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "esbuild": "^0.14.42",
     "esbuild-rails": "^1.0.3",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "trix": "^2.0.0-beta.0"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules",
