--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   <<: *default
   database: location_development
   username: pgin
-  password: Project999$  
+  password:  
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
